--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:background="@color/colorPrimaryDark"
-              android:layout_height="44dp">
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/colorPrimaryDark"
+        android:orientation="vertical">
 
     <TextView
-            android:id="@+id/itemtextview"
+            android:id="@+id/item_text_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
-            android:textStyle="bold"
-            android:textSize="17sp"
-            android:textColor="@android:color/white"
             android:gravity="center_vertical"
             android:text="Lorem Ipsum"
-    />
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
 
 </LinearLayout>
